--- a/core/src/components/range/range.scss
+++ b/core/src/components/range/range.scss
@@ -18,6 +18,7 @@
    * @prop --pin-color: Color of the range pin (only available in MD mode)
    */
   --knob-handle-size: calc(var(--knob-size) * 2);
+  --margin: 8px;
 
   display: flex;
   position: relative;
@@ -262,7 +263,7 @@
    * the input should be on the end
    * when the label sits at the start.
    */
-  @include margin(0, 8px, 0, 0);
+  @include margin(0, var(--margin), 0, 0);
 }
 
 // Range Label Placement - End
@@ -282,7 +283,7 @@
  * when the label sits at the end.
  */
 :host(.range-label-placement-end) .label-text-wrapper {
-  @include margin(0, 0, 0, 8px);
+  @include margin(0, 0, 0, var(--margin));
 }
 
 // Range Label Placement - Fixed
@@ -294,7 +295,7 @@
    * the input should be on the end
    * when the label sits at the start.
    */
-  @include margin(0, 8px, 0, 0);
+  @include margin(0, var(--margin), 0, 0);
 }
 
 /**
